--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-
+numpy==2.2.3
+pandas==2.2.3
+scikit-learn==1.6.1
+matplotlib==3.10.1
+seaborn==0.13.2
+joblib==1.4.2
+tqdm==4.67.1
+geopy==2.4.1
+holidays==0.76
